# Paddle2ONNX

./: .clang-format  .copyright.hook  .cpplint_pre_commit.hook  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  FAQ.md  MANIFEST.in  README.md  README_en.md  README_zh.md  VERSION_NUMBER  convert.py  fluid_to_onnx.py  mac_m1_chip.md  ops.py  p2o_exec.cpp  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_deploykit.py  setup_dev.py  types.py  validate.py  variables.py
.github/ISSUE_TEMPLATE/: bug_report.md  en_issue.md  zn_issue.md
.github/workflows/: build.yml  build_and_test.yml  release_linux_aarch64.yml  release_linux_x86_64.yml
.travis/: precommit.sh  unittest.sh
Contrib/: __init__.py
Contrib/docs/: Paddle2Caffe.md
cmake/: utils.cmake
csrcs/: .cpplint_pre_commit.hook  mac_m1_chip.md  setup.py
csrcs/paddle2onnx/: __init__.py  converter.cc
debug/: __init__.py  model_check.py  onnx_model_helper.py
deploykit/: README.md  deploy_py_export.cc
deploykit/backends/: data_blob.h
deploykit/cpp/: CMakeLists.txt
deploykit/cpp/demo/paddle_inference/: CMakeLists.txt  ppclas_infer.cpp  ppdet_infer.cpp  ppocr_infer.cpp  ppseg_infer.cpp
deploykit/cpp/demo/tensorrt_inference/: CMakeLists.txt  ppclas_infer.cpp  ppdet_infer.cpp  ppocr_infer.cpp
deploykit/cpp/demo/triton_inference/: CMakeLists.txt  ppdet_infer.cpp  ppocr_infer.cpp
deploykit/cpp/demo/triton_inference/ppclas_infer/: ppclas_infer.cpp
deploykit/cpp/demo/triton_inference/ppdet_infer/: fetch_models.sh  ppdet_infer.cpp
deploykit/cpp/demo/triton_inference/ppdet_infer/client/ppyolo/: infer_cfg.yml
deploykit/cpp/demo/triton_inference/ppocr_infer/: ppocr_infer.cpp
deploykit/docs/: build_tensorrt_engine_linux.md  build_triton_engine_linux.md
deploykit/resource/: ppclas.yml  ppocr_cls.yml  ppocr_crnn.yml
deploykit/utils/: utils.cc  utils.h
deploykit_demo/cpp/: resnet50.cc  resnet50.cc.bak  resnet50.cc.old
docs/: FAQ_en.md  README.md  model_zoo.md  op_list.md  readme_en.md  tutorial.ipynb  update_notes_en.md
docs/en/: FAQ.md  change_log.md  compile_local.md  model_zoo.md  op_list.md
docs/tech_walkthrough/: paddle2onnx_tech_walkthrough.ipynb
docs/zh/: FAQ.md  Paddle2ONNX_Development_Guide.md  compile.md  compile_docker.md  compile_local.md  deploykit.md  model_zoo.md  op_list.md  quantize.md
examples/: tutorial.ipynb  tutorial_dygraph2onnx.ipynb  tutorial_dygraph2onnx.py
examples/cpp/: CMakeLists.txt  README.md  cpp_export.cpp  paddle2onnx_bundled-linux-x64.ar.in  paddle2onnx_bundled-linux-x64.sh
examples/cpp_demo/: CMakeLists.txt  README.md
experimental/: openvino_ppdet_cn.md  openvino_ppdet_en.md
experimental/openvino_ppdet/: nms_mapper.py
extras/fit_a_line.inference.model/: __model__  fc_0.b_0  fc_0.w_0
fluid/: utils.py
fluid_onnx/: detection_ops.py  fluid_to_onnx.py  ops.py  ops_deprecated.py  utils.py  variables.py
fluid_onnx/ops/: __init__.py  fluid_op_mapper.py  simple_op_converter.py  utils.py
hardwares/: common.py
hardwares/coreml/: README.md  shape_infer.py
hardwares/rk/: README.md  deployment_guide.md
hardwares/rk/cpp/segmentation/BisenetV2/: CMakeLists.txt  README.md  build-linux_RK3588.sh
hardwares/rk/cpp/segmentation/BisenetV2/src/: main.cpp  rknn_config.cpp  rknn_config.h
hardwares/snpe/: README.md
hardwares/tensorrt/: README.md  trt_infer.py
ifelse/: model.json
model_zoo/classification/: README.md  infer.py  readme.md  run_test.sh
model_zoo/detection/: README.md  infer.py  infer_yolov3.py  run_test.sh
model_zoo/ocr/: README.md  infer.py  predict_system.py  readme.md
model_zoo/segmentation/: README.md  infer.py  readme.md  run_test.sh
models/OCR/: readme.md
models/SEG/: infer.py  readme.md
paddle2onnx/: __init__.py  command.py  convert.py  convert_program.py  convert_to_fp16.py  converter.cc  converter.h  cpp2py_export.cc  deploykit.py  mappers_registry.h.in  onnx_reader.cc  optimize.py  p2o_factory_helper.h  p2o_mappers.h  paddle_reader.cc  utils.py  version.py
paddle2onnx/constant/: constant.py  dtypes.py
paddle2onnx/decoder/: __init__.py
paddle2onnx/graph/: __init__.py  dygraph_helper.py  graph.py  graph_builder.py  graph_helper.py  graph_to_onnx.py  onnx_graph.py  paddle_graph.py
paddle2onnx/legacy/: command.py  convert.py
paddle2onnx/mapper/: activation.cc  activation.h  activation.hpp  convert_helper.cc  convert_helper.h  data_helper.h  data_helper.hpp  elementwise.cc  elementwise.h  elementwise.hpp  exporter.cc  exporter.h  exporter.hpp  loop.cc  mapper.h  mapper.hpp  mapper_helper.hpp  nn.h  nn.hpp  onnx_helper.cc  onnx_helper.cpp  onnx_helper.h  onnx_helper.hpp  quantize_helper.cc  quantize_helper.h  register_mapper.h  register_mapper.hpp  select_input.cc  tensor.hpp  while.cc
paddle2onnx/onnx_helper/: helper.py  mapping.py  onnx.proto  onnx_ONNX_REL_1_7_ml_pb2.py  onnx_pb.py  onnx_pb2.py
paddle2onnx/op_mapper/: __init__.py  activation.py  custom_op_mapper.py  logic.py  mapper_helper.py  math.py  nn.py  op_mapper.py  paddle_op_mapper.py  quantize.py  search.py  tensor.py
paddle2onnx/optimizer/: __init__.py  (+15 more)
paddle2onnx/proto/: .CMakeLists.txt.swp  CMakeLists.txt  p2o_paddle.proto
reader/: image_reader.py  random_reader.py
tests/: act_analysis.py  auto_scan_test.py  convert_and_check_cv_backbones.py  fake_quant.py  fake_quant_demo.py  onnx_runtime.py  onnxbase.py  op_test.py  quantize_ops.py  requirements.txt  run.sh  test_Conv2D_Dropout.py  test_Conv2D_Dropout_dyo.py  test_abs.py  test_abs_dyo.py  test_acos.py  test_activation_ops.py  test_add.py  test_add_dyo.py  test_all.py  test_any.py  test_arg_max_op.py  test_argmax.py  test_argmax_dyo.py  test_argmin.py  test_argsort.py  test_asin.py  test_assign.py  test_assign_dyo.py  test_atan.py  test_auto_scan_ cumsum.py  test_auto_scan_adaptiveavgpool1d.py  test_auto_scan_adaptiveavgpool2d.py  test_auto_scan_adaptiveavgpool3d.py  test_auto_scan_adaptiveavgpool_ops.py  test_auto_scan_affine_channel.py  test_auto_scan_arg_max_min.py  test_auto_scan_argminmax.py  test_auto_scan_argsort.py  test_auto_scan_assign.py  (+404 more)
(+678 files in other folders)
