[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.16",
]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies.files]
version = { path = "version.txt" }

[tool.mypy]
files = "setup.py"
python_version = "3.8"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true